re PR c++/52582 (g++ ICE when compiling qt-4.8.0 with -O2 on PPC (32bit))

PR c++/52582
	* config/rs6000/rs6000.c (call_ABI_of_interest): Return true
	if c_node is NULL.

	* g++.dg/opt/pr52582.C: New test.

From-SVN: r185383